[package]
name = "moonshine-view"
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "Generic Model/View framework designed for Bevy"
categories = ["game-development"]
keywords = ["bevy", "save", "view", "mvc"]
readme = "README.md"
homepage = "https://github.com/Zeenobit/moonshine_view"
repository = "https://github.com/Zeenobit/moonshine_view"

[dependencies]
bevy_app = "0.16.*"
bevy_ecs = "0.16.*"
bevy_utils = "0.16.*"
bevy_platform = "0.16.*"
bevy_log = "0.16.*"
moonshine-core = { version = "0.3.*", path = "../core" }

[dev-dependencies]
rand = "0.9.*"
bevy = "0.16.*"
