[package]
name = "moonshine-view"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Generic Model/View framework designed for Bevy"
categories = ["game-development"]
keywords = ["bevy", "save", "view", "mvc"]
readme = "README.md"
homepage = "https://github.com/Zeenobit/moonshine_view"
repository = "https://github.com/Zeenobit/moonshine_view"

[dependencies]
bevy_app = "0.17"
bevy_ecs = "0.17"
bevy_utils = "0.17"
bevy_platform = "0.17"
bevy_log = "0.17"
moonshine-kind = { version = "0.4" }
moonshine-save = { version = "0.5" }

[dev-dependencies]
rand = "0.9"
bevy = "0.17"
moonshine-core = "0.4"
